--- a/src/pages/accommodation/accommodation.css
+++ b/src/pages/accommodation/accommodation.css
@@ -1,101 +1,3 @@
-/* .breadcrumbs {
-    border: 1px solid #cbd2d9;
-    border-radius: 0.3rem;
-    display: inline-flex;
-    overflow: hidden;
-  }
-  
-  .breadcrumbs__item {
-    background: #fff;
-    color: #333;
-    outline: none;
-    padding: 0.75em 0.75em 0.75em 1.25em;
-    position: relative;
-    text-decoration: none;
-    transition: var(--transition)
-  }
-  
-  .breadcrumbs__item:hover:after,
-  .breadcrumbs__item:hover {
-    background: #edf1f5;
-  }
-  
-  .breadcrumbs__item:focus:after,
-  .breadcrumbs__item:focus,
-  .breadcrumbs__item.is-active:focus {
-    background: #323f4a;
-    color: #fff;
-  }
-  
-  .breadcrumbs__item:after,
-  .breadcrumbs__item:before {
-    background: white;
-    bottom: 0;
-    clip-path: polygon(50% 50%, -50% -50%, 0 100%);
-    content: "";
-    left: 100%;
-    position: absolute;
-    top: 0;
-    transition: var(--transition);
-    width: 1em;
-    z-index: 1;
-  }
-  
-  .breadcrumbs__item:before {
-    background: #cbd2d9;
-    margin-left: 1px;
-  }
-  
-  .breadcrumbs__item:last-child {
-    border-right: none;
-  }
-  
-  .breadcrumbs__item.is-active {
-    background: #edf1f5;
-  } */
-
-
-  /* .AccomHeader {
-      position: relative;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      padding: 12px 16px;
-  }
-
-  .AccomHeader h2 {
-    color: var(--blue);
-    font-weight: 600;
-  }
-
-  .breadcrumbs {
-    display: inline-flex;
-    overflow: hidden;
-    justify-content: space-between;
-    gap: 5px;
-    align-items: flex-start;
-  }
-
-  nav.breadcrumbs a {
-    color: var(--black2);
-    font-size: small;
-  }
-  nav.breadcrumbs .navigate {
-    color: var(--black2);
-    font-size: 30px;
-  }
-  .content {
-    background: var(--blue);
-    border-radius: 20px;
-    padding: 12px;
-  }
-  
-  .contentHeader {
-    display: flex;
-    justify-content: space-between;
-    padding: 12px;
-  } */
-
   .accommodation {
     width: 100%;
     position: relative;
@@ -105,8 +7,6 @@
   .content {
     width: 100%;
     position: relative;
-    /* background: var(--black2); */
-    /* padding: 20px; */
   }
 
   .content .accomHeader {
@@ -115,6 +15,59 @@
     background: var(--white);
     padding: 20px;
     box-shadow: 0 7px 25px rgb(0 0 0 / 8%);
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .accomHeader h2 {
+    font-weight: 600;
+    color: var(--blue);
+  }
+  .accomDetails{
+    margin-top: 10px;
+  }
+
+  .accomDetails h4{
+    font-weight: 200;
+    color: var(--blue);
+  }
+
+  .accomDetails .detailsHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .detailsHeader .insideHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  ul.breadcrumb {
+    list-style: none;
+  }
+
+  ul.breadcrumb li {
+    display: inline;
+    font-size: 18px;
+  }
+
+  ul.breadcrumb li+li:before {
+    padding: 8px;
+    color: black;
+    content: "/\00a0";
+  }
+
+  ul.breadcrumb li a {
+    color: #0275d8;
+    text-decoration: none;
+  }
+
+  ul.breadcrumb li a:hover {
+    color: #01447e;
+    text-decoration: underline;
   }
 
   .content .accomDetails {
@@ -125,3 +78,131 @@
     box-shadow: 0 7px 25px rgb(0 0 0 / 8%);
 
   }
+
+  .accomTable {
+    position: relative;
+    width: 100%;
+  }
+
+  .accomDetails table {
+    width: 100%;
+    margin-top: 10px;
+    border-collapse: collapse;
+  }
+
+  .accomDetails table thead td {
+    font-weight: 600;
+  }
+
+  .accomDetails table tbody tr {
+    color: var(--black1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .accomDetails table tbody tr:last-child {
+    border-bottom: none;
+  }
+
+  .accomDetails table tbody tr:hover {
+    background-color: var(--blue);
+    color: var(--white);
+  }
+
+  .accomDetails table tbody tr:hover a.btn {
+    background-color: var(--white);
+    color: var(--blue);
+  }
+
+  .accomDetails table  tr td {
+    padding: 10px;
+  }
+
+  .accomDetails table tr td:last-child {
+    text-align: start;
+  }
+
+  .accomDetails table tbody tr td select {
+    background-color: var(--blue);
+    color: var(--white);
+    width: 100%;
+    padding: 10px;
+    border-radius: 6px;
+  }
+
+  .accomDetails table tbody tr:hover td select {
+    background-color: var(--white);
+    color: var(--blue);
+  }
+
+  .accomDetails .pagination {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding: 10px;
+  }
+  
+  .accomDetails .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  .accomDetails .pagination a.active {
+    background-color: var(--blue);
+    color: var(--white);
+    border-radius: 50%;
+  }
+  
+  .accomDetails .pagination a:hover:not(.active) {
+    background-color: var(--black2);
+    color: var(--white);
+    border-radius: 50%;
+  }
+
+  @media (max-width: 991px){
+
+    .accomDetails {
+      overflow-x: auto;
+      margin-top: 10px;
+
+    }
+
+    .accomHeader .breadcrumb {
+      display: none;
+    }
+
+    .accomDetails .detailsHeader h4 {
+      display: none;
+    }
+
+    /* .detailsHeader .insideHeader {
+      width: 100%;
+
+    }
+
+    .detailsHeader .insideHeader a {
+      max-width: 100%;
+      
+    } */
+  }
+
+  @media (max-width: 768px){
+
+    .accomHeader .breadcrumb {
+      display: none;
+    }
+    .detailsHeader .insideHeader {
+      width: 100%;
+    }
+/* 
+
+    .detailsHeader .insideHeader {
+      max-width: 70%;
+      
+    } */
+ 
+  }
+
+
+
